# sol-azy

./: .gitignore  404.html  Cargo.toml  GEMINI.md  Notes.md  README.md  architecture.html  cli_usage.html  future.html  index.html  installation.html  introduction.html  print.html  recap-solazy.md  recap_module.html  reverse.html  searchindex.js  searchindex.json  static_analysis.html
.github/workflows/: deploy-mdbook.yml
MY_TEST/: cfg.dot  disassembly.out  full_cfg.dot  immutable_data_table.out  out.dot
architecture/: app_state.html  sast_engine.html
cli/: ast_utils.html  build.html  fetcher.html  recap.html  reverse.html  sast.html
docs/: book.toml
docs/src/: SUMMARY.md  architecture.md  cli_usage.md  future.md  installation.md  introduction.md  recap_module.md  reverse.md  static_analysis.md
recap/: columns.html  constraints.html  tips_and_example.html
reverse/: cfg.html  disassembly.html  dotting.html  immediates.html  overview.html  reduced_cfg.html
rules/: example.html  format.html  starlark_libs.html  templates.html
rules/syn_ast/: account_data_matching.star  account_data_reallocation.yaml  arbitrary_cpi.star  checked_arithm_unwrap.star  missing_owner_check.star  missing_signer_check.star  unvalidated_sysvar_accounts.yaml
rules/tests_syn_ast/: account_data_matching.star  account_data_reallocation.star  account_reinitialization.star  arbitrary_cpi.star  closing_accounts.star  duplicate_mutable_accounts.star  missing_bump_seed_canonicalization.star  saturating_math_usage.star
src/: main.rs
src/commands/: ast_utils_command.rs  (+7 more)
test_starlark_condition_template/: test.py  test_ast.py  test_checked_arithm_unwrap.py
(+83 files in other folders)
