[package]
name = "sol-azy"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "sol-azy"
path = "src/main.rs"

[dependencies]
clap = { version = "4.5.34", features = ["derive"] }
tracing-subscriber = { version = "0.3.19", features = ["env-filter"] }
log = "0.4.27"
anyhow = "1.0.97"
toml = "0.8.20"
syn = { version = "2.0.100", features = ["full", "visit"] }
syn-serde = { version = "0.3", features = ["json"] }
starlark = "0.13.0"
regex = "1.11.1"
serde_json = "1.0.140"
include_dir = "0.7.4"
serde = { version = "1.0.219", features = ["derive"] }
